--- a/css/main.css
+++ b/css/main.css
@@ -7,4 +7,14 @@ body {
 
 footer {
   background-color: #4f4f4f;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
+.footer bd-footer-lg li a {
+  display: inline;
 }
