added portfolio, images for portfolio. added portfolio class in css./

--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,16 @@ body {
 }
 
 .about {
+  margin-bottom: 0px;
+}
+
+.portfolio {
   margin-bottom: 50px;
 }
 
 footer {
   background-color: #4f4f4f;
-  position: fixed;
+  position: initial;
   bottom: 0px;
   left: 0px;
   width: 100%;
