--- a/css/main.css
+++ b/css/main.css
@@ -19,3 +19,10 @@ footer {
   text-align: center;
   margin-top: 50px;
 }
+
+.back-to-top {
+  position: fix;
+  bottom: 75px;
+  right: 25px;
+  display: none;
+}
