--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,14 @@ footer {
 }
 
 .back-to-top {
-  position: fix;
+  position: fixed;
   bottom: 75px;
   right: 25px;
   display: none;
+  background-color: #e9ecef;
+  opacity: 0.5;
+}
+
+.back-to-top:hover {
+  opacity: 0.8;
 }
